--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -1,8 +1,12 @@
-.container {
+.catalog-container {
     margin-top: 20px;
 }
 
 h1 {
     text-align: center;
     margin-bottom: 20px;
+}
+.product-grid-container{
+    display: flex;
+    gap: 5px;
 }
