--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'GTEestiPro';
+    src: url('/fonts/GTEestiPro.woff2') format('woff2'); /* путь указывается от public/ */
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  body {
+    font-family: 'GTEestiPro', Arial, sans-serif;
+  }
